# mas_vision_mian

./: .clang-format  CMakeLists.txt  README.MD  mas_auto_start.sh  setup_serial_device.sh
.claude/: settings.json  settings.local.json
apps/: main.cpp
apps/calibration/: calibrate_camera.cpp  calibrate_camera.hpp  calibrate_handeye.cpp  calibrate_handeye.hpp
auto_aim/: CMakeLists.txt  armor_types.hpp
auto_aim/armor_detector/: armor_detector.cpp  armor_detector.hpp  light_corner_corrector.cpp  light_corner_corrector.hpp  number_classifier.cpp  number_classifier.hpp
auto_aim/armor_shoot/: armor_shoot.cpp  armor_shoot.hpp
auto_aim/armor_track/: README.MD  armor_pose.cpp  armor_pose.hpp  armor_target.cpp  armor_target.hpp  armor_track.cpp  armor_track.hpp
config/: auto_aim.yaml  camera.yaml  hikcamera.yaml  ros2.yaml  serial_config.yaml  usbcamera_config.yaml
hardware/: CMakeLists.txt  common_def.hpp
hardware/hikcamera/: CHANGELOG.md  CMakeLists.txt  hikcamera.cpp  hikcamera.hpp  hikcamera_capture.cpp  hikcamera_reconnect_thread.cpp
hardware/serial/: CMakeLists.txt  serial_types.hpp  user_serial.cpp  user_serial.hpp
hardware/serial/common/include/serial/: serial.h  v8stdint.h
hardware/serial/common/include/serial/impl/: unix.h  win.h
hardware/serial/common/src/: serial.cc
hardware/serial/common/src/impl/: unix.cc
hardware/serial/common/src/impl/list_ports/: list_ports_linux.cc
hardware/usbcamera/: CMakeLists.txt  usbcamera.cpp  usbcamera.hpp  usbcamera_config.cpp  usbcamera_config.hpp
rm_utils/: CMakeLists.txt
rm_utils/SPSCQueue/: SPSCQueue.h
rm_utils/algorithm/: extended_kalman_filter.cpp  extended_kalman_filter.hpp  math_tools.cpp  math_tools.hpp  ransac_sine_fitter.cpp  ransac_sine_fitter.hpp  rune_sine_fitter.cpp  rune_sine_fitter.hpp  rune_sine_fitter.md  trajectory.cpp  trajectory.hpp
rm_utils/display/: display.cpp  display.hpp
rm_utils/mas_log/: mas_log.cpp  mas_log.hpp
rm_utils/plotter/: plotter.cpp  plotter.hpp
rm_utils/ros2_comm/: ros2_comm.cpp  ros2_comm.hpp
threads/: CMakeLists.txt
threads/armor_thread/: armor_thread.cpp  armor_thread.hpp
threads/camera_thread/: camera_thread.cpp  camera_thread.hpp
threads/hikcamera_thread/: hikcamera_thread.cpp  hikcamera_thread.hpp
threads/ros2_thread/: ros2_thread.cpp  ros2_thread.hpp
threads/serial_thread/: serial_thread.cpp  serial_thread.hpp
threads/usbcamera_thread/: usbcamera_thread.cpp  usbcamera_thread.hpp
